<resources>
    <string name="app_name">MeLiChallenge</string>
    <string name="search_items">Search Items</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="quantity">Quantity</string>
    <string name="seller_info">Seller Information</string>
    <string name="location">Location</string>
    <string name="attributes">Attributes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
